Move to Java 17